<resources>
    <string name="app_name">MyAppProtfolio</string>
    <string name="action_settings">Settings</string>

    <string name="toast_spotify_reder">This button will launch my Spotify Reader App!</string>

    <!--label of string-->
    <string name="lbl_title_mynanodegree_appfolio">My Nanodegree Apps!</string>
    <string name="lbl_toolbar_myapp_portfolio">My App Portfolio</string>
    <string name="lbl_spotify_stremer">Spotify Streamer</string>
    <string name="lbl_score_app">SCORES APP</string>
    <string name="lbl_library_app">LIBRARY APP</string>
    <string name="lbl_build_it_bigger">BUILD IT BIGGER</string>
    <string name="lbl_xyz_reader">XYZ READER</string>
    <string name="lbl_capstone">CAPSTONE:MY OWN APP</string>


    <!--toast msg displayed string-->

    <string name="toast_score_app">This button will launch my Scores App!</string>
    <string name="toast_library_app">This button will launch my Library App!</string>
    <string name="toast_build_it_bigger">This button will launch my Build it Bigger App!</string>
    <string name="toast_xyz_reader_app">This button will launch my XYZ Reader App!</string>
    <string name="toast_capstone_app">This button will launch my Capston App!</string>
</resources>
